# jogoSimao

./: .gitignore  Makefile  README.md  jogo
CaveEscape++/: CMakeLists.txt
CaveEscape++/assets/maps/: FasePrimeira.json  FaseSegunda.json
CaveEscape++/dependencies/json/: CMakeLists.txt
CaveEscape++/dependencies/sfml/: CMakeLists.txt
CaveEscape++/include/: CriadorMapas.h  Ente.h
CaveEscape++/include/entidades/: Entidade.h  Projetil.h
CaveEscape++/include/entidades/obstaculos/: Espinho.h  Gosma.h  Obstaculo.h  Plataforma.h
CaveEscape++/include/entidades/personagens/: Esqueleto.h  Inimigo.h  (+4 more)
CaveEscape++/include/estados/: Estado.h  GerenciadorEstados.h
CaveEscape++/include/fases/: Fase.h  FasePrimeira.h  FaseSegunda.h
CaveEscape++/include/gerenciadores/: GerenciadorColisoes.h  GerenciadorEventos.h  GerenciadorGrafico.h  Gerenciador_Colisoes.h  Gerenciador_Eventos.h  Gerenciador_Grafico.h
CaveEscape++/include/listas/: Iterador.h  Lista.h  ListaEntidades.h
CaveEscape++/include/menus/: Menu.h  MenuPausa.h  MenuPrincipal.h
CaveEscape++/include/observadores/: Observador.h  ObservadorFase.h  ObservadorJogador.h  ObservadorMenu.h
CaveEscape++/include/principal/: Jogo.h
CaveEscape++/include/texto/: ElementoBotao.h  ElementoTexto.h
CaveEscape++/src/: CriadorMapas.cpp  Ente.cpp  main.cpp
CaveEscape++/src/entidades/: Entidade.cpp  Projetil.cpp
CaveEscape++/src/estados/: Estado.cpp  GerenciadorEstados.cpp
CaveEscape++/src/fases/: Fase.cpp  FasePrimeira.cpp  FaseSegunda.cpp
CaveEscape++/src/gerenciadores/: GerenciadorColisoes.cpp  GerenciadorEventos.cpp  GerenciadorGrafico.cpp  Gerenciador_Colisoes.cpp  Gerenciador_Eventos.cpp  Gerenciador_Grafico.cpp
CaveEscape++/src/listas/: ListaEntidades.cpp
CaveEscape++/src/menus/: Menu.cpp  MenuPausa.cpp  MenuPrincipal.cpp
CaveEscape++/src/observadores/: Observador.cpp  ObservadorFase.cpp  ObservadorJogador.cpp  ObservadorMenu.cpp
CaveEscape++/src/principal/: Jogo.cpp
CaveEscape++/src/texto/: ElementoBotao.cpp  ElementoTexto.cpp
nome_do_jogo/dependencies/: CMakeLists.txt
(+114 files in other folders)
